--- a/docassemble/LLAW33012020S1P18/data/questions/S1_Prototype.yml
+++ b/docassemble/LLAW33012020S1P18/data/questions/S1_Prototype.yml
@@ -1,6 +1,6 @@
 ---
 mandatory: True
-question: Finished!
+question: Finished! Interview is Complete!
 subquestion: |
   **Please read this infomation carefully:**
   
