--- a/docassemble/LLAW33012020S1P18/data/questions/ASA_prototype1.yml
+++ b/docassemble/LLAW33012020S1P18/data/questions/ASA_prototype1.yml
@@ -15,7 +15,7 @@ subquestion: |
   
   ***Disclaimer***
   
-  This program is **not** legal advice. 
+  This program does **not** give legal advice. The information in the booklet is not intended to be a subsitute for legal advice and should not be relied upon as legal advice. Appropriate legal advice should be sought in relation to any matters you may have. 
   
   Answer all questions honestly. This is important. 
   
@@ -68,17 +68,17 @@ question: COMPLETED
 subquestion: |
  **Please read this infomation carefully:**
   
-  Your Local Area Coordinator (LAC) will organise a meeting time and will contact you about it. 
+  Your Local Area Coordinator (LAC) should be in touch to organise a meeting time and will contact you about it. 
   
-  There is a pdf document available for you to download or email to yourself at the very bottom of the page. It is below the table that shows the answers you gave today. Scroll down to find it. 
+  There is a pdf document available for you to download or email to yourself at the very bottom of the page. It is below the table that shows the answers you gave today. Scroll down to the end (past the table below) of the page to find it. 
 
   **Remember to bring these things to your meeting:**
   
-  - The pdf document at the very bottom of this page 
+  - The pdf document at the very bottom of this page.
   
   -	Your bank account information. This means you must bring your account name, account number and BSB. 
   
-  -	Your MyGov account information 
+  -	Your MyGov account information, this can be found on your MyGov under 'Account Settings'. 
 
   *Ask your Local Area Coordinator or a family member to help you!*
 
@@ -262,7 +262,7 @@ list collect:
   is final: False
   allow delete: False
   label: |
-    Please enter information about what you do for fun and your community involvement
+    Please enter information about what you do for fun and your community involvement.
 ---
 question: Do you want to add any more activities?
 yesno: community_involvement.there_is_another
@@ -357,59 +357,54 @@ fields:
     input type: area  
 ---
 question: What are some fun activities that you like to do? 
-under: |
-  Note: these are things that enjoy doing in your free time.
+subquestion: |
+   These are things that enjoy doing in your free time. For example, swimming, shopping, cooking, walking your pet.
 fields:
   - Favourite activity: favourite_activity
     input type: area 
- 
-help: |
-  Hint: these are things you like to do in your free time. For example, swimming, shopping, cooking, walking your pet.
   
-continue button label: next 
+continue button label: continue
 Mandatory: True
 --- 
 question: Are you a part of any groups? 
 under: |
-  Note: for example; a choir, a church group, an arts and crafts group, drama group.
+subquestion: |
+ For example; a choir, a church group, an arts and crafts group, drama group or   a volunteer team. 
 fields:
   - Group: group_member
     input type: area 
  
 help: |
-  Hint: these are groups that you join to do a specific activity with other people.
+  These are groups that you join to do a specific activity with other people to achieve a specific goal or for fun. These groups can be formal groups which are task based e.g. a poltical group. These groups can also be informal meaning they are groups which are created usually with friends to do common activities between members e.g. a prayer group.
   
-continue button label: next 
+continue button label: continue 
 Mandatory: True
 --- 
 question: What are you able to do in your life now that you enjoy doing? 
-under: |
-  Note: for example, garden or look after plants, cook, look after your pet, knit. 
+subquestion: | 
+  For example, garden or look after plants, cook, look after your pet, knit. 
 fields:
  activities I can do alone and enjoy doing: individual_activity
  input type: area 
  
 help: |
-  Hint: these can be things like bathing without help or catching public transport alone.
+ These can be simple everyday things like bathing without help. They can also be more complex things such as managing your own finances.  
   
-continue button label: next 
+continue button label: continue 
 Mandatory: True
 --- 
 question: What are you not able to do that you would like to start to learn to do or be able to do on your own? 
-under: |
-  Note: for example, you would like to be able to cook for yourself or catch public transport on your own. 
+subquestion: |
+  For example, you would like to be able to cook for yourself or catch public transport on your own. 
 fields:
  things I can not do alone and would like to learn to do alone: learn_activity
  input type: area
- 
-help: |
-  Hint: for example: someone may help you dress every morningbut you would like to start doing that alone. 
   
-continue button label: next 
+continue button label: Continue 
 Mandatory: True
 --- 
 question: Write 2 short term goals that you would like to achieve
-under: |
+subquestion: |
   Note: A short-term goal is something you want to do soon. This can mean today, this week, this month, or even this year. 
 fields:
  my 2 short term goals (you can put as much detail in your goal as you like):  shortterm_goals
@@ -424,11 +419,11 @@ help: |
   * Relevant (reasonable, realistic and resourced, results-based). This means that   the goal is something that can be added into your life without causing any         problems; and
   * Time bound (time-based, time limited, time/cost limited, timely, time-           sensitive). You need to be able to set a time limit for when this goal should be   reached e.g. by next Monday. 
   
-continue button label: next 
+continue button label: continue 
 Mandatory: True
 --- 
 question: Write 2 long term goals that you would like to achieve
-under: |
+Subquestion: |
   Note: Long term goals can be goals that you would like to reach in a few years. These goals are goals that need e.g. specific skills that you need to attain over time e.g. getting a job. Use the SMART goal guide (press help) to make these goals. 
 fields:
  my 2 long term goals (you can put as much detail in your goal as you like).:  longterm_goals
@@ -437,20 +432,20 @@ fields:
 help: |
   Hint: When thinking of a goal try to make sure it is clear (specific) and reachable. Use the SMART goal guide to see whether you need to adjust your goals.  Make sure your goal is: 
   
-  * Specific (simple, sensible, significant). This means that it is clear, and you    know why you want to reach that goal;
-  * Measurable (meaningful, motivating). This means you should be able to know       when your goal is achieved. To do this you need to answer questions such as; how   much?;
-  * Achievable (agreed, attainable). This means the goal is something that you can   reach and are able to do;
-  * Relevant (reasonable, realistic and resourced, results-based). This means that   the goal is something that can be added into your life without causing any         problems; and
-  * Time bound (time-based, time limited, time/cost limited, timely, time-           sensitive). You need to be able to set a time limit for when this goal should be   reached e.g. by next Monday. 
+  * Specific (simple, sensible, significant). This means that it is clear, and you know why you want to reach that goal;
+  * Measurable (meaningful, motivating). This means you should be able to know       when your goal is achieved. To do this you need to answer questions such as;  how much? E.g. writing I want to be able to run is not measurable, you need to know how many kms you would like to run and in what time frame;
+  * Achievable (agreed, attainable). This means the goal is something that you can reach and are able to do;
+  * Relevant (reasonable, realistic and resourced, results-based). This means that the goal is something that can be added into your life without causing any         problems; and
+  * Time bound (time-based, time limited, time/cost limited, timely, time-           sensitive). You need to be able to set a time limit for when this goal should be reached e.g. in two years. 
   
-continue button label: next 
+continue button label: continue 
 Mandatory: True
 ---
 question: What kind of help do you get already and want to keep?
 fields:
   - List the people that help you each day and what they help you do: STcurrenthelp
     input type: area
-under: |
+subquestion: |
   For Example: Do you have someone who...
   
   - takes you to appointments
@@ -465,8 +460,8 @@ question: Is there anything else you need help with?
 fields:
   - Write other things you need help doing but dont have someone to help you do them: STmorehelp
     input type: area
-under: |
-  For Example: Do you want to visit friends but dont have someone to come with you?
+subquestion: |
+  For Example: Do you want to visit friends but do not have someone to come with you?
 ---
 question: Is there any other information you want the NDIS to know about you?
 fields:
