--- a/docassemble/LLAW33012020S1P18/data/questions/ASA_prototype1.yml
+++ b/docassemble/LLAW33012020S1P18/data/questions/ASA_prototype1.yml
@@ -33,7 +33,7 @@ buttons:
      url: https://communitybridgingservices.org.au/
 ---
 # This code block drives the interview. Initial requirements. 
-mandatory: True 
+mandatory: True
 code: | 
   if ASAaccess == 'Yes': 
     endpoint['eligible']
@@ -43,12 +43,12 @@ code: |
 # This question block asks the questions to drive the code block above
 question: Have you been granted access to the NDIS as someone with an intellectual disability or {developmental delay}?  
 fields: 
-  - no label: ASAaccess
+  - no label:  ASAaccess
     choices: 
       - Yes
       - No
 under: | 
-If you have been told to fill in this application then you have been granted access. 
+  If you have been told to fill in this application then you have been granted     access. 
 terms: 
   developmental delay: Developmental delay means a person finds it hard to do everyday things. For example, have a conversation.
 --- 
@@ -96,26 +96,26 @@ subquestion: |
   Daily Tasks        | ${ ASAdaily } 
   Likes              | ${ ASAlikes } 
   Job                | ${ ASAjob } 
-  Daily Tasks        | ${ ASAMonday } ${ ASATuesday } ${ ASAWednesday} ${ ASAThursday }                      | ${ ASAFriday } ${ ASASaturday } ${ ASASunday } 
+  Daily Tasks        | ${ ASAMonday } ${ ASATuesday } ${ ASAWednesday} ${ ASAThursday }        | ${ ASAFriday } ${ ASASaturday } ${ ASASunday } 
   Sometimes          | ${ ASAsometimes } 
-  Activities         | ${ ASAfavourite_activity } 
-  Group Membership   | ${ ASAgroup_member } 
-  Enjoyable Tasks    | ${ ASAindividual_activity } 
-  New Tasks          | ${ ASAlearn_activity } 
-  Short Term Goals   | ${ ASAshortterm_goals } 
-  Long Term Goals    | ${ ASAlongterm_goals } 
-  Current Help       | ${ ASAcurrenthelp } 
-  Further Help       | ${ ASAmorehelp }
-  Other Information  | ${ ASAotherpersoninfo } 
-  Plan Supervisor    | ${ ASAplan }
-  Meeting Companion  | ${ ASAbring } 
+  Activities         | ${ favourite_activity } 
+  Group Membership   | ${ group_member } 
+  Enjoyable Tasks    | ${ individual_activity } 
+  New Tasks          | ${ learn_activity } 
+  Short Term Goals   | ${ shortterm_goals } 
+  Long Term Goals    | ${ longterm_goals } 
+  Current Help       | ${ STcurrenthelp } 
+  Further Help       | ${ STmorehelp }
+  Other Information  | ${ STotherpersoninfo } 
+  Plan Supervisor    | ${ STplan }
+  Meeting Companion  | ${ STbring } 
 
   
   
     **This document was filed on ${ today() } at ${ format_time(current_datetime()) }** 
 
 attachment: 
-  docx template file: Jinja_Populated_Document_1_JUNE.docx
+  docx template file: Jinja_4_JUNE.docx
   valid formats: 
     - pdf
 buttons:
@@ -149,7 +149,7 @@ fields:
   - no label: ASAdisability 
     input type: area
 under: |
-Be honest and tell the truth. If your disability effects your life a little or a lot, it is ok to write that.  
+  Be honest and tell the truth. If your disability effects your life a little or a lot, it is ok to write that.  
 ---
 objects:
   - important_people: DAList.using(object_type=Thing, there_are_any=True, minimum_number = 2)
@@ -361,54 +361,42 @@ question: What are some fun activities that you like to do?
 subquestion: |
    These are things that enjoy doing in your free time. For example, swimming, shopping, cooking, walking your pet.
 fields:
-  - Favourite activity: ASAfavourite_activity
+  - Favourite activity: favourite_activity
     input type: area 
-  
-
-Mandatory: True
 --- 
 question: Are you a part of any groups? 
 under: |
 subquestion: |
  For example; a choir, a church group, an arts and crafts group, drama group or   a volunteer team. 
 fields:
-  - Group: ASAgroup_member
+  - Group: group_member
     input type: area 
  
 help: |
   These are groups that you join to do a specific activity with other people to achieve a specific goal or for fun. These groups can be formal groups which are task based e.g. a poltical group. These groups can also be informal meaning they are groups which are created usually with friends to do common activities between members e.g. a prayer group.
-  
-
-Mandatory: True
 --- 
 question: What are you able to do in your life now that you enjoy doing? 
 subquestion: | 
   For example, garden or look after plants, cook, look after your pet, knit. 
 fields:
- activities I can do alone and enjoy doing: ASAindividual_activity
+ activities I can do alone and enjoy doing: individual_activity
  input type: area 
  
 help: |
  These can be simple everyday things like bathing without help. They can also be more complex things such as managing your own finances.  
-   
-
-Mandatory: True
 --- 
 question: What are you not able to do that you would like to start to learn to do or be able to do on your own? 
 subquestion: |
   For example, you would like to be able to cook for yourself or catch public transport on your own. 
 fields:
- Things I can not do alone and would like to learn to do alone: ASAlearn_activity
+ Things I can not do alone and would like to learn to do alone: learn_activity
  input type: area
-   
-
-Mandatory: True
 --- 
 question: Write 2 short term goals that you would like to achieve
 subquestion: |
   Note: A short-term goal is something you want to do soon. This can mean today, this week, this month, or even this year. 
 fields:
- My 2 short term goals (you can put as much detail in your goal as you like):  ASAshortterm_goals
+ My 2 short term goals (you can put as much detail in your goal as you like): shortterm_goals
  input type: area 
  
 help: |
@@ -419,14 +407,12 @@ help: |
   * Achievable (agreed, attainable). This means the goal is something that you can   reach and are able to do;
   * Relevant (reasonable, realistic and resourced, results-based). This means that   the goal is something that can be added into your life without causing any         problems; and
   * Time bound (time-based, time limited, time/cost limited, timely, time-           sensitive). You need to be able to set a time limit for when this goal should be   reached e.g. by next Monday. 
-
-Mandatory: True
 --- 
 question: Write 2 long term goals that you would like to achieve
 Subquestion: |
   Note: Long term goals can be goals that you would like to reach in a few years. These goals are goals that need e.g. specific skills that you need to attain over time e.g. getting a job. Use the SMART goal guide (press help) to make these goals. 
 fields:
- My 2 long term goals (you can put as much detail in your goal as you like).:  ASAlongterm_goals
+ My 2 long term goals (you can put as much detail in your goal as you like).:  longterm_goals
  input type: area 
  
 help: |
@@ -437,13 +423,10 @@ help: |
   * Achievable (agreed, attainable). This means the goal is something that you can reach and are able to do;
   * Relevant (reasonable, realistic and resourced, results-based). This means that the goal is something that can be added into your life without causing any         problems; and
   * Time bound (time-based, time limited, time/cost limited, timely, time-           sensitive). You need to be able to set a time limit for when this goal should be reached e.g. in two years. 
-  
-
-Mandatory: True
 ---
 question: What kind of help do you get already and want to keep?
 fields:
-  - List the people that help you each day and what they help you do: ASAcurrenthelp
+  - List the people that help you each day and what they help you do: STcurrenthelp
     input type: area
 subquestion: |
   For Example: Do you have someone who...
@@ -458,21 +441,21 @@ subquestion: |
 ---
 question: Is there anything else you need help with?
 fields:
-  - Write other things you need help doing but dont have someone to help you do them: ASAmorehelp
+  - Write other things you need help doing but dont have someone to help you do them: STmorehelp
     input type: area
 subquestion: |
   For Example: Do you want to visit friends but do not have someone to come with you?
 ---
 question: Is there any other information you want the NDIS to know about you?
 fields:
-  - List things you find hard to do each day or new things you want to do but haven't told us about yet: ASAotherpersoninfo
+  - List things you find hard to do each day or new things you want to do but haven't told us about yet: STotherpersoninfo
     input type: area
 under: |
   For Example: Is it hard for you to get dressed but you haven’t told us about it yet?
 ---
 question: You can bring someone along with you to your meeting for help.
 fields:
-  - Who would you like to bring?: ASAbring
+  - Who would you like to bring?: STbring
     datatype: target_variable
     choices:
     - Mum
@@ -487,7 +470,7 @@ fields:
 ---
 question: The NDIS will give you money to pay for the things you need help with. This is called *your plan.*
 fields:
-  - Who would you like to be in charge of your plan?: ASAplan
+  - Who would you like to be in charge of your plan?: STplan
     datatype: target_variable
     choices:
     - I dont know yet
